--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="lib/history.js"></script>
   <script src="lib/react-router.js"></script>
   <script src="lib/react-router-dom.js"></script>
+  <script src="lib/axios.js"></script>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <link rel="stylesheet" href="lib/animate.css" />
