--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="lib/react-router-dom.js"></script>
   <script src="lib/axios.js"></script>
 
+  <link rel="shortcut icon" href="assets/svg/horse.svg" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <link rel="stylesheet" href="lib/animate.css" />
   <link rel="stylesheet" href="assets/css/main.css" />
